fixed task header alignment and setup container for next section

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -100,10 +100,10 @@ body {
 
       .number {
         font-weight: 100;
-        font-size: 38px;
+        font-size: 30px;
         margin: 0 11px 0 0;
         position: relative;
-        top: 5px;
+        top: 2px;
         left: 10px;
       }
     }
@@ -113,8 +113,8 @@ body {
     background: black;
     border-radius: 50%;
     position: absolute;
-    right: 25px;
-    top: 100px;
+    right: 30px;
+    top: 90px;
     padding: 10px 10px;
 
     .fas {
@@ -123,4 +123,8 @@ body {
       top: 100px;
     }
   }
+}
+
+.content-container {
+  max-width: 1200px;
 }
